--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Projeto Bootstrap - CEAC">
     <meta name="keywords" content="HTML5, CSS3, Javascript, Bootstrap, Jquery, Projeto CEAC">
     <meta name="author" content="Rubens Batista">
+    <title>Ourstore | About</title>
     <!--BOOTSTRAP CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--DEFAULT CSS-->
