--- a/shop.html
+++ b/shop.html
@@ -28,49 +28,49 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"><!--Nav-->
         <div class="container"><!--Nav Container-->
-            <a class="navbar-brand" href="index.html" style="max-width: 7em;">
-                <img src="img/logo-dark.png" alt="Logo Marca" class="img-fluid">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--Collapse Nav-->
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="shop.html">Shop</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Categories
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown"><!--Dropdown menu-->
-                    <a class="dropdown-item" href="#">Special Offers</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Bakery</a>
-                    <a class="dropdown-item" href="#">Fruits and Vegetables</a>
-                    <a class="dropdown-item" href="#">Dairy and Eggs</a>
-                    <a class="dropdown-item" href="#">Meat and Poultry</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">FAQ</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0"><!--Search Nav-->
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form><!--Fim Search Nav-->
-            </div><!--Fim Collapse Nav-->
-        </div>
+          <a class="navbar-brand" href="index.php" style="max-width: 7em;">
+              <img src="img/logo-dark.png" alt="Logo Marca" class="img-fluid">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent"><!--Collapse Nav-->
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.php">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="shop.html">Shop</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Categories
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown"><!--Dropdown menu-->
+                  <a class="dropdown-item" href="#">Special Offers</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Bakery</a>
+                  <a class="dropdown-item" href="#">Fruits and Vegetables</a>
+                  <a class="dropdown-item" href="#">Dairy and Eggs</a>
+                  <a class="dropdown-item" href="#">Meat and Poultry</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="login.php">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0"><!--Search Nav-->
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form><!--Fim Search Nav-->
+          </div><!--Fim Collapse Nav-->
+      </div>
       </nav><!--Fim Nav-->
         <!--JUMBOTRON-->
         <div class="jumbotron mt-5 pb-4 bg-dark text-white rounded-0">
